--- a/demo.html
+++ b/demo.html
@@ -106,7 +106,7 @@
         var nextPolyline = [];
      
 
-        var isPointOnLineValue =30
+        var isPointOnLineValue =100
 
         let s1 = document.querySelector('.s1');
         let s2 = document.querySelector('.s2');
@@ -126,6 +126,7 @@
     <script src="./map.js"></script>
     <script src="./com.js"></script>
     <script src="./setMenu.js"></script>
+    <script src="./ajax.js"></script>
     <script type="text/javascript">
 
 
