--- a/html/index.html
+++ b/html/index.html
@@ -69,14 +69,14 @@
         }
     </style>
 
-    <title>GeoJSON</title>
+    <title>步道</title>
     <!-- <link rel="stylesheet" href="//a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
     <script
         src="https://webapi.amap.com/maps?v=1.4.11&key=19b6ffb41d6c37ad488f0d57088e2ebd&plugin=AMap.Riding,AMap.Driving,AMap.Walking">
         </script>
     <script src="https://webapi.amap.com/loca?v=1.3.2&key=19b6ffb41d6c37ad488f0d57088e2ebd"></script>
     <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
-    <script src="./jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="https://a.amap.com/Loca/static/mock/heatmapData.js"></script>
     <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
 </head>
@@ -123,10 +123,10 @@
             init()
         }
     </script>
-    <script src="./map.js"></script>
-    <script src="./com.js"></script>
-    <script src="./setMenu.js"></script>
-    <script src="./ajax.js"></script>
+    <script src="../js/map.js"></script>
+    <script src="../js/com.js"></script>
+    <script src="../js/setMenu.js"></script>
+    <script src="../js/ajax.js"></script>
     <script type="text/javascript">
 
 
