--- a/html/setting.html
+++ b/html/setting.html
@@ -15,6 +15,10 @@
             align-items: center;
             justify-content: center;
         }
+        html{
+          width: 100%;
+          height: 100%;
+        }
     </style>
 </head>
 
