--- a/html/index2.html
+++ b/html/index2.html
@@ -160,12 +160,9 @@
             <button class="btn" onclick="layer.hide()">关闭热力图</button>
         </div>
     </div>
-    <script src="../js/map.js"></script>
-    <script src="../js/com.js"></script>
-    <script src="../js/setMenu.js"></script>
-    <script src="../js/ajax.js"></script>
-    <script>
-        var heatmap;//热力图
+
+    <script type="text/javascript">
+     var heatmap;//热力图
         var userType = 1;
         var postLines = []; //分组
         var lines = []; //所有的线
@@ -178,7 +175,15 @@
         var routeList = [];
         var nextPolyline = [];
         var isPointOnLineValue = 30
-
+        </script>
+    <script src="../js/map.js"></script>
+    <script src="../js/com.js"></script>
+    <script src="../js/setMenu.js"></script>
+    <script src="../js/ajax.js"></script>
+    <script src="../js/heatmap.js"></script>
+    <script>
+       
+        init()
 
         let s1 = document.querySelector('.s1');
         let s2 = document.querySelector('.s2');
@@ -195,197 +200,7 @@
             init()
         }
     </script>
-    <script src="//a.amap.com/Loca/static/mock/heatmapData.js"></script>
 
-    <script type="text/javascript">
-
-        init()
-
-        function init() {
-            map?.remove(markerList)
-
-            //分组
-            postLines = [];
-            lines = []; //所有的线
-            markerList = [];//所有的岔路口
-            selectLine = [];
-            obj = {
-                start: '',
-                end: '',
-            }
-            routeList = [];
-            nextPolyline = [];
-            map?.clearMap()
-            showLoading()
-            // $.ajax({
-            //     type: "GET",
-            //     url: 'https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/smart-scenic-v2-web/amcharts/1.json',
-            //     async: true,
-            //     contentType: "application/json",
-            //     dataType: "json",
-            //     success: ((res) => {
-            //         let geoJSON = { ...res }
-            //         gcoord.transform(geoJSON, gcoord.WGS84, gcoord.GCJ02);
-            //         getGroup(geoJSON);
-            //         hideLoading();
-
-            //     }),
-            //     fail: ((err) => {
-            //         console.log(err)
-            //         hideLoading();
-
-            //     })
-            // });
-
-            $.ajax({
-                type: "GET",
-                url: 'https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/smart-scenic-v2-web/amcharts/1.json',
-                async: true,
-                contentType: "application/json",
-                dataType: "json",
-                success: ((res) => {
-                    let geoJSON = { ...res }
-                    gcoord.transform(geoJSON, gcoord.WGS84, gcoord.GCJ02);
-                    console.log(geoJSON.features, 'geoJSON.features');
-                    getGroup(geoJSON);
-                    hideLoading();
-                    let filter_features = geoJSON.features.filter(v => {
-                        v.height = 0;
-                        if (v.geometry.coordinates && !Array.isArray(v.geometry.coordinates[0])) {
-                            v.height = v.geometry.coordinates[2] || 0;
-                        }
-                        return v.geometry.type == 'Point';
-                    })
-
-                    layer.setData(filter_features, {
-                        lnglat: (data) => {
-                            const coordinates = data.value.geometry.coordinates;
-                            return [coordinates[0], coordinates[1]];
-                        },
-                        value: "height",
-                    }).setOptions({
-                        style: {
-                            radius: 16,
-                            color: {
-                                0.5: '#2c7bb6',
-                                0.65: '#abd9e9',
-                                0.7: '#ffffbf',
-                                0.9: '#fde468',
-                                1.0: '#d7191c'
-                            }
-                        }
-                    }).render();
-
-
-
-                    var geojson = new AMap.GeoJSON({
-                        geoJSON: geoJSON,
-                        getMarker: (geojson, lnglats) => {
-                            if (geojson.properties && geojson.properties.name) {
-                                const coordinates = geojson.geometry.coordinates
-                                const marker = _marker(geojson.properties.name, lnglats,
-                                    defaultIcon0, {
-                                    'id': lnglats,
-                                    'type': 3 // 0 默认值 1 起点 2 终点
-                                });
-                                return marker;
-                            }
-                            return;
-                        },
-                        getPolyline: (geojson, lnglats) => {
-                            return new AMap.Polyline({
-                                path: lnglats,
-                                strokeWeight: 3,
-                                strokeOpacity: 0.2,
-                                //  bubble: true,
-                            })
-                        }
-
-                    });
-
-                    geojson.setMap(map);
-                    console.log('GeoJSON 数据加载完成')
-                }),
-                fail: ((err) => {
-                    console.log(err)
-                })
-            });
-        }
-
-
-        // $.ajax({
-        //     type: "GET",
-        //     url: 'https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/smart-scenic-v2-web/amcharts/1.json',
-        //     async: true,
-        //     contentType: "application/json",
-        //     dataType: "json",
-        //     success: ((res) => {
-        //         let geoJSON = { ...res }
-        //         gcoord.transform(geoJSON, gcoord.WGS84, gcoord.GCJ02);
-        //         console.log(geoJSON.features,'geoJSON.features');
-
-        //         let filter_features = geoJSON.features.filter(v => {
-        //             v.height = 0;
-        //             if (v.geometry.coordinates && !Array.isArray(v.geometry.coordinates[0])  ) {
-        //                 v.height = v.geometry.coordinates[2]  || 0;
-        //             }
-        //             return v.geometry.type == 'Point';
-        //         })
-
-        //         layer.setData(filter_features, {
-        //             lnglat: (data) => {
-        //                 const coordinates = data.value.geometry.coordinates;
-        //                 return [coordinates[0], coordinates[1]];
-        //             },
-        //             value: "height",
-        //         }).setOptions({
-        //             style: {
-        //                 radius: 16,
-        //                 color: {
-        //                     0.5: '#2c7bb6',
-        //                     0.65: '#abd9e9',
-        //                     0.7: '#ffffbf',
-        //                     0.9: '#fde468',
-        //                     1.0: '#d7191c'
-        //                 }
-        //             }
-        //         }).render();        
-
-
-
-        //         var geojson = new AMap.GeoJSON({
-        //             geoJSON: geoJSON,
-        //             getMarker: (geojson, lnglats) => {
-        //                 if (geojson.properties && geojson.properties.name) {
-        //                     const coordinates = geojson.geometry.coordinates
-        //                     const marker = _marker(geojson.properties.name, lnglats,
-        //                         defaultIcon0, {
-        //                         'id': lnglats,
-        //                         'type': 3 // 0 默认值 1 起点 2 终点
-        //                     });
-        //                     return marker;
-        //                 }
-        //                 return;
-        //             },
-        //             getPolyline: (geojson, lnglats) => {
-        //                 return new AMap.Polyline({
-        //                      path: lnglats,
-        //                      strokeWeight: 3,
-        //                      strokeOpacity: 0.2,
-        //                     //  bubble: true,
-        //                 })
-        //             }
-
-        //         });
-
-        //         geojson.setMap(map);
-        //         console.log('GeoJSON 数据加载完成')
-        //     }),
-        //     fail: ((err) => {
-        //         console.log(err)
-        //     })
-        // });
-    </script>
 </body>
 
 </html>
