--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,60 @@
 
         }
 
+        .pop {
+            position: fixed;
+            background: white;
+            width: 690px;
+            height: 410px;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            border-radius: 10px;
+            padding: 20px;
+            display: none;
+        }
+
+        .pop-w {
+            width: 100%;
+            height: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+
+        .over {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #f5f5f5;
+            opacity: 0.5;
+            z-index: 1000;
+        }
+
+        .layout {
+            display: none;
+            position: absolute;
+            top: 40%;
+            left: 40%;
+            width: 20%;
+            height: 20%;
+            z-index: 1001;
+            text-align: center;
+        }
+
+        .close {
+            position: absolute;
+            right: 20px;
+            top: 0px;
+            font-size: 20px;
+            cursor: pointer;
+        }
+
         .current a {
             font-size: 20px;
         }
@@ -68,16 +122,16 @@
             color: red;
         }
     </style>
-
     <title>步道</title>
     <!-- <link rel="stylesheet" href="//a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
     <script
         src="https://webapi.amap.com/maps?v=1.4.11&key=19b6ffb41d6c37ad488f0d57088e2ebd&plugin=AMap.Riding,AMap.Driving,AMap.Walking">
         </script>
     <script src="https://webapi.amap.com/loca?v=1.3.2&key=19b6ffb41d6c37ad488f0d57088e2ebd"></script>
-    <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
+    <!-- <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script> -->
+    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
     <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="https://a.amap.com/Loca/static/mock/heatmapData.js"></script>
+    <!-- <script src="https://a.amap.com/Loca/static/mock/heatmapData.js"></script> -->
     <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
 </head>
 
@@ -85,28 +139,51 @@
 
     <div id="container"></div>
     <div id="panel"></div>
+    <div id="over" class="over"></div>
     <div id="w">
         <div class="s2 active">路线规划</div>
         <div class="s1 ">推荐路线<span style="font-size: 12px;">(选择起点和终点)</span></div>
     </div>
-    <div id="over" class="over"></div>
-    <div id="layout" class="layout"><img src="https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/shanxiwenlv/demo/o_31.gif" /></div>
-    <script>
-        var userType = 1;
-        //分组
-        var postLines = [];
+    <div class="pop">
+        <div class="pop-w">
+            <iframe src="./setting.html" frameborder="0"></iframe>
+        </div>
+        <div class="close" onclick="document.querySelector('.pop').style='display:none'">x</div>
+    </div>
+    <div id="layout" class="layout"><img
+            src="https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/shanxiwenlv/demo/o_31.gif" /></div>
+    <div class="input-card" style="width: auto;">
+        <div class="input-item">
+            <button class="btn" onclick="layer.show()">显示热力图</button>
+        </div>
+        <div class="input-item">
+            <button class="btn" onclick="layer.hide()">关闭热力图</button>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+     var heatmap;//热力图
+        var userType = 1; // 推荐路线 or 路线规划
+        var routerLines = []; //分组
         var lines = []; //所有的线
         var markerList = [];//所有的岔路口
-        var selectLine = [];
+        var selectLine = []; //选中的先
         var obj = {
             start: '',
             end: '',
-        }
-        var routeList = [];
-        var nextPolyline = [];
-     
-
-        var isPointOnLineValue =100
+        } //起点终点
+        var pointList = []; //所有选中的点
+        var nextPolyline = []; // 临时线
+        var isPointOnLineValue = 30 //点位精度
+        </script>
+    <script src="../js/map.js"></script>
+    <script src="../js/com.js"></script>
+    <script src="../js/setMenu.js"></script>
+    <script src="../js/ajax.js"></script>
+    <script src="../js/heatmap.js"></script>
+    <script>
+       
+        init()
 
         let s1 = document.querySelector('.s1');
         let s2 = document.querySelector('.s2');
@@ -123,52 +200,7 @@
             init()
         }
     </script>
-    <script src="../js/map.js"></script>
-    <script src="../js/com.js"></script>
-    <script src="../js/setMenu.js"></script>
-    <script src="../js/ajax.js"></script>
-    <script type="text/javascript">
 
-
-        init()
-
-        function init() {
-            map?.remove(markerList)
-
-            //分组
-            postLines = [];
-            lines = []; //所有的线
-            markerList = [];//所有的岔路口
-            selectLine = [];
-            obj = {
-                start: '',
-                end: '',
-            }
-            routeList = [];
-            nextPolyline = [];
-            map?.clearMap()
-            showLoading()
-            $.ajax({
-                type: "GET",
-                url: 'https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/smart-scenic-v2-web/amcharts/1.json',
-                async: true,
-                contentType: "application/json",
-                dataType: "json",
-                success: ((res) => {
-                    let geoJSON = { ...res }
-                    gcoord.transform(geoJSON, gcoord.WGS84, gcoord.GCJ02);
-                    getGroup(geoJSON);
-                    hideLoading();
-
-                }),
-                fail: ((err) => {
-                    console.log(err)
-                    hideLoading();
-
-                })
-            });
-        }
-    </script>
 </body>
 
 </html>
