--- a/html/index.html
+++ b/html/index.html
@@ -111,8 +111,9 @@
             background-color: white;
             z-index: 1111;
             text-align: center;
+            top: 0;
         }
-
+        
         #w div {
             margin-top: 40px;
             cursor: pointer;
@@ -121,12 +122,40 @@
         .active {
             color: red;
         }
+        .mask {
+        background-color: rgba(0, 0, 0, 0.2);
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 10000;
+        }
+ .mask_box {
+ background: #ffffff;
+ border-radius: 6px;
+ position: fixed;
+ top: 50%;
+ left: 50%;
+ overflow: hidden;
+ padding: 1rem 2rem;
+ transform: translate(-50%, -50%);
+ }
+
+
+ .hide {
+ display: none;
+ }
+
+ .show {
+ display: block;
+ }
     </style>
     <title>步道</title>
     <!-- <link rel="stylesheet" href="//a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
     <script
         src="https://webapi.amap.com/maps?v=1.4.11&key=19b6ffb41d6c37ad488f0d57088e2ebd&plugin=AMap.Riding,AMap.Driving,AMap.Walking">
-        </script>
+    </script>
     <script src="https://webapi.amap.com/loca?v=1.3.2&key=19b6ffb41d6c37ad488f0d57088e2ebd"></script>
     <!-- <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script> -->
     <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
@@ -136,11 +165,11 @@
 </head>
 
 <body>
-
+   
     <div id="container"></div>
     <div id="panel"></div>
     <div id="over" class="over"></div>
-    <div id="w">
+    <div id="w" class="input-card">
         <div class="s2 active">路线规划</div>
         <div class="s1 ">推荐路线<span style="font-size: 12px;">(选择起点和终点)</span></div>
     </div>
@@ -151,7 +180,7 @@
         <div class="close" onclick="document.querySelector('.pop').style='display:none'">x</div>
     </div>
     <div id="layout" class="layout"><img
-            src="https://kybcrm-files.oss-cn-hangzhou.aliyuncs.com/prod/tesla/shanxiwenlv/demo/o_31.gif" /></div>
+            src="../img/o_31.gif" /></div>
     <div class="input-card" style="width: auto;">
         <div class="input-item">
             <button class="btn" onclick="layer.show()">显示热力图</button>
@@ -160,13 +189,17 @@
             <button class="btn" onclick="layer.hide()">关闭热力图</button>
         </div>
     </div>
-
+   <div class="mask hide">
+       <div class="mask_box">
+           系统提示
+       </div>
+   </div>
     <script type="text/javascript">
-     var heatmap;//热力图
+        var heatmap; //热力图
         var userType = 1; // 推荐路线 or 路线规划
         var routerLines = []; //分组
         var lines = []; //所有的线
-        var markerList = [];//所有的岔路口
+        var markerList = []; //所有的岔路口
         var selectLine = []; //选中的先
         var obj = {
             start: '',
@@ -175,14 +208,13 @@
         var pointList = []; //所有选中的点
         var nextPolyline = []; // 临时线
         var isPointOnLineValue = 30 //点位精度
-        </script>
+    </script>
     <script src="../js/map.js"></script>
     <script src="../js/com.js"></script>
     <script src="../js/setMenu.js"></script>
     <script src="../js/ajax.js"></script>
     <script src="../js/heatmap.js"></script>
     <script>
-       
         init()
 
         let s1 = document.querySelector('.s1');
