--- a/html/index.html
+++ b/html/index.html
@@ -5,152 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-    <style>
-        html,
-        body,
-        #container {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
 
-        .amap-marker-label {
-            border: 0;
-            background-color: transparent;
-
-        }
-
-        .pop {
-            position: fixed;
-            background: white;
-            width: 690px;
-            height: 410px;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            border-radius: 10px;
-            padding: 20px;
-            display: none;
-        }
-
-        .pop-w {
-            width: 100%;
-            height: 100%;
-        }
-
-        iframe {
-            width: 100%;
-            height: 100%;
-        }
-
-        .over {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #f5f5f5;
-            opacity: 0.5;
-            z-index: 1000;
-        }
-
-        .layout {
-            display: none;
-            position: absolute;
-            top: 40%;
-            left: 40%;
-            width: 20%;
-            height: 20%;
-            z-index: 1001;
-            text-align: center;
-        }
-
-        .close {
-            position: absolute;
-            right: 20px;
-            top: 0px;
-            font-size: 20px;
-            cursor: pointer;
-        }
-
-        .current a {
-            font-size: 20px;
-        }
-
-        .over {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #f5f5f5;
-            opacity: 0.5;
-            z-index: 1000;
-        }
-
-        .layout {
-            display: none;
-            position: absolute;
-            top: 40%;
-            left: 40%;
-            width: 20%;
-            height: 20%;
-            z-index: 1001;
-            text-align: center;
-        }
-
-        #w {
-            position: fixed;
-            top: 0;
-            right: 0;
-            width: 200px;
-            height: 200px;
-            background-color: white;
-            z-index: 1111;
-            text-align: center;
-            top: 0;
-        }
-        
-        #w div {
-            margin-top: 40px;
-            cursor: pointer;
-        }
-
-        .active {
-            color: red;
-        }
-        .mask {
-        background-color: rgba(0, 0, 0, 0.2);
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 10000;
-        }
- .mask_box {
- background: #ffffff;
- border-radius: 6px;
- position: fixed;
- top: 50%;
- left: 50%;
- overflow: hidden;
- padding: 1rem 2rem;
- transform: translate(-50%, -50%);
- }
-
-
- .hide {
- display: none;
- }
-
- .show {
- display: block;
- }
-    </style>
     <title>步道</title>
     <!-- <link rel="stylesheet" href="//a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
     <script
@@ -159,19 +14,21 @@
     <script src="https://webapi.amap.com/loca?v=1.3.2&key=19b6ffb41d6c37ad488f0d57088e2ebd"></script>
     <!-- <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script> -->
     <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
+    <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
+    <link rel="stylesheet" href="../css/index.css" />
     <script src="../js/jquery-3.3.1.min.js"></script>
     <!-- <script src="https://a.amap.com/Loca/static/mock/heatmapData.js"></script> -->
     <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
 </head>
 
 <body>
-   
+
     <div id="container"></div>
     <div id="panel"></div>
     <div id="over" class="over"></div>
     <div id="w" class="input-card">
-        <div class="s2 active">路线规划</div>
-        <div class="s1 ">推荐路线<span style="font-size: 12px;">(选择起点和终点)</span></div>
+        <div class="s1 active">路线规划</div>
+        <div class="s2 ">推荐路线<span style="font-size: 12px;">(选择起点和终点)</span></div>
     </div>
     <div class="pop">
         <div class="pop-w">
@@ -179,8 +36,7 @@
         </div>
         <div class="close" onclick="document.querySelector('.pop').style='display:none'">x</div>
     </div>
-    <div id="layout" class="layout"><img
-            src="../img/o_31.gif" /></div>
+    <div id="layout" class="layout"><img src="../img/o_31.gif" /></div>
     <div class="input-card" style="width: auto;">
         <div class="input-item">
             <button class="btn" onclick="layer.show()">显示热力图</button>
@@ -189,18 +45,18 @@
             <button class="btn" onclick="layer.hide()">关闭热力图</button>
         </div>
     </div>
-   <div class="mask hide">
-       <div class="mask_box">
-           系统提示
-       </div>
-   </div>
+    <div class="mask hide">
+        <div class="mask_box">
+            系统提示
+        </div>
+    </div>
     <script type="text/javascript">
         var heatmap; //热力图
         var userType = 1; // 推荐路线 or 路线规划
         var routerLines = []; //分组
         var lines = []; //所有的线
         var markerList = []; //所有的岔路口
-        var selectLine = []; //选中的先
+        var selectLine = []; //选中的线
         var obj = {
             start: '',
             end: '',
@@ -208,6 +64,24 @@
         var pointList = []; //所有选中的点
         var nextPolyline = []; // 临时线
         var isPointOnLineValue = 30 //点位精度
+        function _resetMap() {
+            markerList && map ?.remove(markerList)
+            heatmap; //热力图
+            userType = 1;
+            routerLines = []; //分组
+            lines = []; //所有的线
+            markerList = []; //所有的岔路口
+            selectLine = [];
+            obj = {
+                start: '',
+                end: '',
+            }
+            pointList = [];
+            nextPolyline = [];
+            isPointOnLineValue = 30
+
+            map ?.clearMap()
+        }
     </script>
     <script src="../js/map.js"></script>
     <script src="../js/com.js"></script>
@@ -220,16 +94,18 @@
         let s1 = document.querySelector('.s1');
         let s2 = document.querySelector('.s2');
         s1.onclick = () => {
-            userType = 2
+           
             s1.classList.add("active");
             s2.classList.remove("active");
             init()
+             userType = 1
         }
         s2.onclick = () => {
-            userType = 1
             s2.classList.add("active");
             s1.classList.remove("active");
             init()
+            userType = 2
+
         }
     </script>
 
